# osmo-ios

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  ContentView.swift  ExportOptions.plist  Info.plist  OPENCLAW_SETUP.md  Osmo.entitlements  OsmoApp.swift  Shaders.metal  frontend-enhancement.md  project.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.openclaw.yml  docker-compose.yml  pyproject.toml  railway.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_tables.py  002_add_chat_sessions.py  003_add_user_name.py  004_add_memory_tables.py  005_add_indexing_tables.py  006_add_subscription_tier.py  007_add_apns_device_token.py  008_add_user_facts.py
backend/app/: config.py  dependencies.py  main.py
backend/app/api/: attachments.py  auth.py  calendar.py  command.py  health.py  messages.py  notifications.py  openclaw.py  preferences.py  subscription.py  suggestions.py  widgets.py
backend/app/connectors/: apns.py  brave_search.py  document_parser.py  google_calendar.py  google_gmail.py  google_routes.py  llm.py  whisper.py
backend/app/core/: briefing.py  executor.py  fact_extractor.py  indexer.py  jobs.py  knowledge.py  openclaw_briefing.py  openclaw_client.py  openclaw_task_router.py  planner.py  policy.py  preference_manager.py  proactive.py  scheduler.py  session_manager.py  verifier.py
backend/app/db/: session.py
backend/openclaw/: Dockerfile  entrypoint.sh  railway.toml
backend/tests/: conftest.py  test_executor.py  test_google_calendar.py  test_planner.py  test_policy.py
(+114 files in other folders)
